--- a/play.css
+++ b/play.css
@@ -79,7 +79,8 @@
 }
 
 #progressBarFull {
-    height: 3.6rem;
+    margin-top : 1.5rem
+    height: 3.4rem;
     background-color: #0077ff;
     width: 0%;
   }
